# advent-of-code-2023

./: README.md
day_1/: solution.py
day_2/: day_2.sln
day_2/day_2/: Program.cs
day_2/day_2/Enums/: Cubes.cs
day_3/: day_3.sln
day_3/day_3/: Program.cs
day_3/day_3/Entities/: Number.cs  Symbol.cs
day_4/: day4.cabal
day_4/app/: solution.hs
day_4/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
day_5/: pom.xml
day_5/src/main/java/: InputReader.java  Main.java
day_6/: solution.py
day_7/: day7.cabal
day_7/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
day_7/solution/: solution.hs
day_8/: pom.xml
day_8/src/main/kotlin/: Main.kt
