cabal-version:      3.0
name:               day7
version:            0.1.0.0
-- synopsis:
-- description:
author:             Iryna Lazouskaya
maintainer:         lozovskaya032@gmail.com
-- copyright:
build-type:         Simple
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable day7
    import:           warnings
    main-is:          solution.hs
    -- other-modules:
    -- other-extensions:
    build-depends:    base ^>=4.14.3.0,
                      split,
                      containers
    hs-source-dirs:   solution
    default-language: Haskell2010
